--- a/requirements.txt
+++ b/requirements.txt
@@ -59,7 +59,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.5
 notebook_shim==0.2.4
-numpy==2.2.6
+numpy>=1.21,<2.0
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
@@ -110,3 +110,12 @@ websocket-client==1.8.0
 websockets==15.0.1
 widgetsnbextension==4.0.14
 yfinance==0.2.65
+
+# 시각화 패키지
+matplotlib>=3.7.0,<3.9.0
+seaborn>=0.12.0
+plotly>=5.15.0
+kaleido>=0.2.1
+
+# 웹 대시보드
+streamlit>=1.28.0
