--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,16 @@
 env/
 capstone/
 
+# 아연추가
+venv/
+
 # 파이썬 캐시
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+# (아연추가)
+*.log
 
 # 환경변수/민감정보
 .env
@@ -22,3 +27,8 @@ __pycache__/
 # 시스템 파일
 .DS_Store
 Thumbs.db
+
+
+# 아연추가
+__pycache__/
+*.pyc
