--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,43 @@ core/*
 
 # technical
 !core/technical_classes/
-!core/technical_classes/**g
+!core/technical_classes/**
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Virtual environments
+capstone/
+venv/
+env/
+.venv/
+
+# Python cache
 __pycache__/
 *.pyc
 __pycache__
+
+# Data and models (optional - uncomment if you don't want to track these)
+# data/
+# models/
+*.pkl
+*.h5
+*.keras
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Jupyter
+.ipynb_checkpoints/
+# 노트북은 notebooks/ 폴더에만 보관
+*.ipynb
+!notebooks/*.ipynb
